# proto_emscripten_game

./: CMakeLists.txt  FindPkgMacros.cmake  SDL  emsdk-portable  entityx
include/: SDL  stb
include/entityx/: Entity.h  Event.h
include/glm/core/: dummy.cpp
proj.emscripten/: run_cmake.sh
src/: App.cpp  App.h  basic_opengl.cpp  common.h  imageloader.cpp  imageloader.h  main.cpp  main.h
src/components/: Body.h  Camera.h  Sprite.cpp  Sprite.h  Transform.h
src/events/: QuitEvent.h  ResizeEvent.h
src/systems/: EventSystem.cpp  EventSystem.h  RenderSystem.cpp  RenderSystem.h  WindowSystem.cpp  WindowSystem.h
